# peony

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile  Makefile.macos  README.md  TODO.md  TODO.txt  build  build.bat  compile_flags.txt  make_linux.mk  make_macos.mk  make_windows.mk  peony.ctm  remedybg-session.rdbg  renderdoc_settings.cap  run  run.bat
cmake/: Findassimp.cmake  Findfreetype.cmake  Findglad.cmake  Findglfw.cmake  Findglm.cmake
data/: demo_scene.peony
data/entities/: axes.peony_entities  floor.peony_entities  goose.peony_entities  internal.peony_entities  lights.peony_entities  ocean.peony_entities  rocks.peony_entities  temple.peony_entities
data/materials/: archer.peony_materials  axes.peony_materials  floor.peony_materials  goose.peony_materials  internal.peony_materials  island.peony_materials  light.peony_materials  ocean.peony_materials  platform.peony_materials  rocks.peony_materials  temple.peony_materials  temple_1.peony_materials  temple_2.peony_materials  temple_3.peony_materials  vampire.peony_materials
data/models/: axes.peony_models  floor.peony_models  goose.peony_models  internal.peony_models  light.peony_models  ocean.peony_models  rocks.peony_models  temple.peony_models
data/scenes/: animtest.peony_scene  coast.peony_scene  dancer.peony_scene  demo.peony_scene  terraintest.peony_scene
docs/: peony_format.md
extra/: Info.plist  peony.sln  remedybg-session.rdbg  renderdoc_settings.cap
include/: cacheline.hpp  glad.cpp  glad_330.cpp  glad_410.cpp  glad_430.cpp
resources/: .gitignore  miniGoose.fbx
retired/: CMakeLists.txt  Makefile  build.bat  run.bat  ubuild.bat
retired/cmake/: Findassimp.cmake  Findfreetype.cmake  Findglfw.cmake
retired/vs/: .gitignore  peony.sln  peony.vcxproj  peony.vcxproj.filters
retired/xcode/peony/peony.xcodeproj/: project.pbxproj
shaders/: renderdebug.frag  simple.frag  standard_depth.vert  unknown.frag
src/: _unity.cpp  alpaca.frag  alpaca.vert  anim.cpp  anim.hpp  array.cpp  array.hpp  asset.cpp  asset.hpp  axes.vert  axis.frag  axis.vert  backpack.frag  backpack.vert  badthing.cpp  behavior.cpp  behavior.hpp  behavior_component.cpp  behavior_component.hpp  behavior_component_manager.cpp  behavior_component_manager.hpp  behavior_functions.cpp  behavior_functions.hpp  camera.cpp  camera.hpp  cameras.cpp  cameras.hpp  common.hpp  component.hpp  constants.cpp  constants.hpp  control.cpp  control.hpp  core.cpp  core.hpp  data.hpp  debug.cpp  debug.hpp  debug_ui.cpp  debug_ui.hpp  (+153 more)
src/shaders/: alpaca.frag  axes.frag  axes.vert  backpack.vert  base.vert  blur.frag  common.glsl  common_fragment.glsl  debugdraw.frag  depth.frag  depth.vert  entity.frag  entity.vert  entity_depth.frag  entity_depth.geom  entity_depth.vert  floor.frag  goose.frag  goose.vert  gui_element.frag  gui_element.vert  gui_generic.frag  light.frag  light.vert  lighting.frag  normal_visualizer.geom  postprocessing.frag  postprocessing.vert  screenquad.frag  screenquad.vert  simple.frag  simple.vert  skysphere.frag  standard.frag  standard.vert  standard_depth.frag  standard_depth.geom  standard_depth.vert  text.frag  text.vert  (+5 more)
src_external/: glad.cpp  pstr.c  pstr.h
src_external/glad/: glad.h
src_shaders/: axes.frag  base.vert  blur.frag  common.glsl  common_fragment.glsl  debugdraw.frag  debugdraw.vert  discard.frag  gui_generic.frag  gui_generic.vert  lighting.frag  normal_visualizer.geom  postprocessing.frag  renderdebug.frag  screenquad.vert  simple.frag  skysphere.frag  skysphere.vert  standard.frag  standard.vert  standard_depth.frag  standard_depth.geom  standard_depth.vert  unknown.frag  water.frag  water.geom  water.vert  water_depth.vert
vs/: gl.sln  gl.vcxproj  gl.vcxproj.filters  peony.vcxproj  peony.vcxproj.filters
xcode/peony/peony.xcodeproj/xcshareddata/xcschemes/: peony.xcscheme
